--- a/package.json
+++ b/package.json
@@ -14,8 +14,19 @@
     "@codemirror/lang-html": "^6.4.9",
     "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/lang-lezer": "^6.0.1",
+    "@codemirror/lang-markdown": "^6.2.5",
+    "@codemirror/lang-php": "^6.0.1",
     "@codemirror/lang-python": "^6.1.4",
+    "@codemirror/lang-rust": "^6.0.1",
+    "@codemirror/lang-sql": "^6.6.4",
+    "@codemirror/lang-wast": "^6.0.2",
+    "@codemirror/lang-xml": "^6.1.0",
     "@jitsi/react-sdk": "^1.4.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
     "@uiw/codemirror-theme-eclipse": "^4.21.24",
     "@uiw/codemirror-theme-github": "^4.22.1",
     "@uiw/codemirror-theme-vscode": "^4.21.24",
@@ -23,12 +34,16 @@
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.2",
+    "classnames": "^2.5.1",
+    "color": "^4.2.3",
     "express": "^4.18.3",
     "framer-motion": "^11.2.10",
     "fs": "^0.0.1-security",
     "googleapis": "^140.0.0",
     "gsap": "^3.12.5",
+    "html-to-image": "^1.11.11",
     "install": "^0.13.0",
+    "jotai": "^2.8.3",
     "js-cookie": "^3.0.5",
     "mongoose": "^8.4.1",
     "next": "^14.1.4",
